[package]
name = "gud-price-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
gud-price = "0.1.8"
phf = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
chrono = "0.4"
mpp = { version = "0.8.3", default-features = false, features = ["axum", "tempo"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
